--- a/styles.css
+++ b/styles.css
@@ -401,6 +401,11 @@ ul.assignfeedback_editpdf_menu {
     position: relative;
 }
 
+.assignfeedback_editpdf_widget .drawingcanvas {
+    stroke-width: 1px;
+    stroke-width: 1;
+}
+
 @media (max-width: 960px) {
     .assignfeedback_editpdf_widget .pageheader {
         height: 104px;
